Test/bad/coverage/noncovering_on_deep_pat.tt
import Data.Nat
import Data.Vect

not : Bool -> Bool
not False = True
not True = False

maybeNot : Vect 2 Bool -> Bool
pat b =>
  maybeNot [False, b] = b

